--- a/.github/workflows/pydoc.yaml
+++ b/.github/workflows/pydoc.yaml
@@ -13,21 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+ 
     - name: Checkout Code
       uses: actions/checkout@v2
+
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
-    - name: Generate HTML Documentation
+
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+
+
+    - name: Generate HTML Documentation
+      run: |
         for file in $(find src -name '*.py'); do
           module=$(echo $file | sed 's|/|.|g' | sed 's|.py||g' | sed 's|src.||g')
-          python -m pydoc -w "src.$module"
+          # Ignore files that raise errors
+          python -m pydoc -w "src.$module" || echo "Skipping $module due to an error"
         done
+
 
     - name: Upload Documentation
       uses: actions/upload-artifact@v4
